# document-rag-assistant

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/backend/: main.py  server_endpoints.py  server_schemas.py
src/frontend/: demo.py
tests/: test_main.py
